@@ -64,7 +64,7 @@ public class StocService {
 
             List<Stoc> ingredienteStoc = stocRepo.findAll().stream()
                     .filter(s -> s.getIngredient().getId() == ingredient.getId())
-                    .toList();
+                    .collect(java.util.stream.Collectors.toList());
 
             double ramas = necesar;
 
